# aika

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
benches/: sim_bench.rs
examples/: realtime.rs
src/: lib.rs  logger.rs  universes.rs  worlds.rs
src/logger/: mod.rs  snapshot.rs
src/worlds/: agent.rs  clock.rs  config.rs  error.rs  event.rs  mailbox.rs  message.rs  mod.rs  world.rs
