[package]
name = "aika"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "realtime"
path = "examples/realtime.rs"


[dependencies]
tokio = {version = "1.43.0", features = ["full", "time", "sync", "rt", "rt-multi-thread"]}
tokio-macros = "2.5.0"
futures = "0.3.31"
anyhow = "1.0.95"
rayon = "1.10.0"
serde = "1.0.217"